--- a/index_pose.html
+++ b/index_pose.html
@@ -7,7 +7,7 @@
 <style>
   :root{
     --pitch-bottom: 14%;     /* distanza del trapezio dal fondo */
-    --subs-gap:      6%;     /* quanto spazio lasciare fra campo e panchina */
+    --subs-gap:      4%;     /* quanto spazio lasciare fra campo e panchina */
     --bg:#0b0c11;
     --roof-dark:#151923;
     --roof-mid:#1f2531;
@@ -138,7 +138,7 @@
   }
 
 .badge{
-    width: clamp(160px, 18vw, 240px);  /* molto più largo su smartphone */
+    width: clamp(120px, 13vw, 200px);
     font-size: clamp(12px, 1.6vw, 16px);
   }
 }
