--- a/index_pose.html
+++ b/index_pose.html
@@ -52,12 +52,14 @@
   }
   svg{position:absolute; inset:0; width:100%; height:100%;}
 
-  /* Layer dei giocatori: NIENTE clip, così foto/badge possono uscire */
-  .players{
-    position:absolute; left:50%; bottom:var(--pitch-bottom); transform:translateX(-50%);
-    width:100%; height:75%;
-    overflow:visible; pointer-events:none;
-  }
+/* 1) Rendi il layer un container */
+.players{
+  position:absolute; left:50%; bottom:var(--pitch-bottom); transform:translateX(-50%);
+  width:100%; height:75%;
+  overflow:visible; pointer-events:none;
+
+  container-type: inline-size;   /* <— CHIAVE */
+}
 
  .player{
   position:absolute;
@@ -68,33 +70,21 @@
   align-items:center;           /* <— nuovo: centra orizzontalmente foto+badge */
 }
 
+/* 2) Foto e badge proporzionali alla larghezza del campo (.players) */
 .player .photo{
-  display:block;
-  width: 9%;          /* circa il 9% della larghezza del campo */
+  width: 9cqw;                   /* ~9% della larghezza del campo */
   height:auto;
-  filter: drop-shadow(0 8px 18px rgba(0,0,0,.45));
-  pointer-events:none;
-  margin:0 auto;
   position:relative;
-  z-index:1;          /* sta dietro al badge */
+  z-index:1;
 }
 
 .badge{
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  width: 28%;         /* circa il 28% della larghezza del campo */
+  width: 28cqw;                  /* ~28% della larghezza del campo */
   aspect-ratio: 5.5/1;
-  margin-top:4px;
   background: url('badge.png?v=6') center/100% auto no-repeat;
-  font-weight:900;
-  font-size: 2.2vw;   /* scala anche il testo */
-  color:#000;
-  white-space:nowrap;
-  line-height:1;
-  pointer-events:none;
   position:relative;
-  z-index:2;          /* sta davanti alla foto */
+  z-index:2;                     /* sopra la foto */
+  /* se serve: font-size: 2.2cqw;  // testo che scala col campo */
 }
 
   /* SUBS: badge dentro al campo, lista fuori */
