--- a/index_pose.html
+++ b/index_pose.html
@@ -6,8 +6,8 @@
 <title>Campo in prospettiva + MATCHDAY + Foto sopra badge</title>
 <style>
   :root{
-    --pitch-bottom: 8%;     /* distanza del trapezio dal fondo */
-    --subs-gap:      3%;     /* quanto spazio lasciare fra campo e panchina */
+    --pitch-bottom: 14%;     /* distanza del trapezio dal fondo */
+    --subs-gap:      8%;     /* quanto spazio lasciare fra campo e panchina */
     --bg:#0b0c11;
     --roof-dark:#151923;
     --roof-mid:#1f2531;
@@ -79,12 +79,22 @@
 }
 
 .badge{
-  width: 28cqw;                  /* ~28% della larghezza del campo */
+  display:flex;
+  align-items:center; 
+  justify-content:center;   /* testo centrato */
+  width: 28cqw;             /* proporzione rispetto al campo */
   aspect-ratio: 5.5/1;
+  margin-top:4px;
   background: url('badge.png?v=6') center/100% auto no-repeat;
+  font-family: system-ui, Arial, sans-serif; /* lo stesso font del body */
+  font-weight:900;
+  font-size: 2cqw;          /* scala con la larghezza del campo */
+  color:#000;
+  white-space:nowrap;
+  line-height:1;
+  pointer-events:none;
   position:relative;
-  z-index:2;                     /* sopra la foto */
-  /* se serve: font-size: 2.2cqw;  // testo che scala col campo */
+  z-index:2;
 }
 
   /* SUBS: badge dentro al campo, lista fuori */
