--- a/index_pose.html
+++ b/index_pose.html
@@ -116,17 +116,19 @@
   min-width:10cqw; text-align:center;
 }
 
-/* Lista dei sostituti: centrata sotto al campo */
 .subs-list{
   position:absolute;
   left:0; right:0;
-  bottom:calc(var(--pitch-bottom) - var(--subs-gap));
+
+  /* metà dello spazio fra il fondo dello stage e il fondo del campo */
+  bottom: calc( (var(--pitch-bottom) - var(--subs-gap)) / 2 );
+
   color:#fff;
-  font-size:clamp(.85rem,1.3cqw,1rem);
+  font-size: clamp(.85rem, 1.3cqw, 1rem);
   text-align:center;
   padding:.5cqh 1cqw;
-  word-break:break-word;
-  overflow-wrap:anywhere;
+  word-break: break-word;
+  overflow-wrap: anywhere;
   opacity:.95;
   letter-spacing:.2cqw;
 }
