--- a/index_pose.html
+++ b/index_pose.html
@@ -32,7 +32,7 @@
     border-radius:18px;
     background:#0b0c11;
     box-shadow:0 25px 80px rgba(0,0,0,.6);
-    container-type:inline-size;
+    container-type:size;
   }
 
   .stadium{
