--- a/index_pose.html
+++ b/index_pose.html
@@ -16,7 +16,7 @@
     --rossoblu:linear-gradient(90deg,#8b0000,#000080);
     --photo-h: 20cqh;          /* tieni la tua taglia attuale */
     --badge-w: 38cqh;        /* larghezza badge proporzionale all'altezza */
-    --badge-font: 1.7cqh; /* testo: segue cqh ma non esplode su stretto */
+    --badge-font: min(1.8cqh, 2.3cqw); /* testo: segue cqh ma non esplode su stretto */
     --badge-overlap: 1.4cqh;   /* quanto il badge “entra” sulla foto */
   }
 
